Fixed overlooked renaming of bedrock => tectonic

--- a/services/api/.env
+++ b/services/api/.env
@@ -4,29 +4,29 @@ BIND_HOST=0.0.0.0
 BIND_PORT=2300
 
 # Main DB Config
-MONGO_URI=mongodb://localhost/bedrock_dev
+MONGO_URI=mongodb://localhost/tectonic_dev
 
 # Default admin account for dashboard login
 ADMIN_NAME=admin
-ADMIN_EMAIL=admin@bedrock.foundation
-ADMIN_PASSWORD=development.now
+ADMIN_EMAIL=admin@tectonic.io
+ADMIN_PASSWORD=tectonic.now
 
 # JWT Secret to sign and encrypt tokens
 JWT_SECRET=m6bv7!m|E:7:*X3Mx7I)2+Y>B70+&K
 
 # Postmark mail delivery
-POSTMARK_FROM=no-reply@bedrock.foundation
+POSTMARK_FROM=no-reply@tectonic.io
 POSTMARK_APIKEY=
 
 # App details for emails
 APP_NAME=Bedrock
 APP_URL=http://localhost:2200
-APP_SUPPORT_EMAIL=support@bedrock.foundation
+APP_SUPPORT_EMAIL=support@tectonic.io
 APP_COMPANY_ADDRESS=Bedrock Inc, 3 Abbey Road, San Francisco CA 94102
 
 # Uploads (local|gcs)
 UPLOADS_STORE=local
-UPLOADS_GCS_BUCKET=bedrock-staging-uploads
+UPLOADS_GCS_BUCKET=tectonic-staging-uploads
 
 # Sentry Error Tracking
 SENTRY_DSN=
