--- a/services/web/.env
+++ b/services/web/.env
@@ -4,7 +4,7 @@ ENV_NAME=development
 
 BIND_HOST=0.0.0.0
 BIND_PORT=2200
-APP_NAME=Bedrock
+APP_NAME=Tectonic
 API_URL=http://localhost:2300
 
 # HTTP Basic Auth
