--- a/services/api/.env
+++ b/services/api/.env
@@ -28,9 +28,18 @@ APP_COMPANY_ADDRESS=Bedrock Inc, 3 Abbey Road, San Francisco CA 94102
 UPLOADS_STORE=local
 UPLOADS_GCS_BUCKET=tectonic-staging-uploads
 
+# Batches (local|gcs)
+BATCHES_STORE=local
+BATCHES_GCS_BUCKET=tectonic-staging-uploads
+
 # Sentry Error Tracking
 SENTRY_DSN=
 
 LOG_LEVEL=info
 
 ENV_NAME=development
+
+# PubSub
+PUBSUB_EMULATOR_HOST=
+PUBSUB_INGEST_TOPIC=ingest
+PUBSUB_INGEST_SUBSCRIPTION=pull-ingest
