--- a/deployment/environments/bedrock-foundation/data/mongo-deployment.yml
+++ b/deployment/environments/bedrock-foundation/data/mongo-deployment.yml
@@ -13,7 +13,7 @@ spec:
         app: mongo
     spec:
       containers:
-        - image: mongo:4.2.8
+        - image: mongo:4.4.4
           name: main
           ports:
             - name: mongo
@@ -25,5 +25,5 @@ spec:
       volumes:
         - name: mongo-persistent-storage
           gcePersistentDisk:
-            pdName: mongo-disk
+            pdName: tectonic-mongo-disk
             fsType: ext4
