--- a/services/api/.env
+++ b/services/api/.env
@@ -43,3 +43,6 @@ ENV_NAME=development
 PUBSUB_EMULATOR_HOST=
 PUBSUB_INGEST_TOPIC=ingest
 PUBSUB_INGEST_SUBSCRIPTION=pull-ingest
+
+# Analytics
+ELASTICSEARCH_URI=http://localhost:9200
