--- a/services/web/package.json
+++ b/services/web/package.json
@@ -49,6 +49,7 @@
     "lodash": "^4.17.20",
     "luxon": "^1.23.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "moment": "^2.23.0",
     "postcss-loader": "^3.0.0",
     "prop-types": "^15.7.2",
     "raw-loader": "^4.0.1",
@@ -62,6 +63,8 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-syntax-highlighter": "^12.2.1",
+    "react-virtualized": "^9.21.0",
+    "recharts": "^2.0.0-beta.7",
     "remark-gfm": "^1.0.0",
     "semantic-ui-less": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
