Added dockerfile for pubsub emulator

--- a/services/api/.env
+++ b/services/api/.env
@@ -40,7 +40,8 @@ LOG_LEVEL=info
 ENV_NAME=development
 
 # PubSub
-PUBSUB_EMULATOR_HOST=
+PUBSUB_EMULATOR=true
+PUBSUB_EMULATOR_HOST=localhost:8200
 PUBSUB_RAW_EVENTS_TOPIC=raw-events
 
 # Analytics
