--- a/services/api/package.json
+++ b/services/api/package.json
@@ -16,8 +16,7 @@
     "lint": "eslint src scripts",
     "test": "jest",
     "test:watch": "jest --watch -i",
-    "generate": "cd ../../generator && yarn install && yarn generate",
-    "pubsub": "node scripts/start-pubsub"
+    "generate": "cd ../../generator && yarn install && yarn generate"
   },
   "dependencies": {
     "@bedrockio/config": "^2.0.3",
@@ -49,7 +48,6 @@
     "eslint": "^7.5.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-jest": "^23.19.0",
-    "google-pubsub-emulator": "^4.0.0",
     "jest": "^26.1.0",
     "juice": "^7.0.0",
     "mongodb": "^3.6.2",
