Moved pubsub and analytics to lib folder. Added elasticsearch-sink worker base.

--- a/services/api/.env
+++ b/services/api/.env
@@ -43,6 +43,10 @@ ENV_NAME=development
 PUBSUB_EMULATOR=true
 PUBSUB_EMULATOR_HOST=localhost:8200
 PUBSUB_RAW_EVENTS_TOPIC=raw-events
+PUBSUB_RAW_EVENTS_SUB_ELASTICSEARCH=raw-events-sub-elasticsearch
+
+# Elasticsearch Sink worker
+ELASTICSEARCH_SINK_WORKER_MAX_IN_PROGRESS=100
 
 # Analytics
 ELASTICSEARCH_URI=http://localhost:9200
