--- a/services/api/package.json
+++ b/services/api/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "start": "nodemon -w src --exec \"MOCK_EMAIL=true node src/index.js | pino-pretty\"",
     "start:production": "node src/index",
+    "elasticsearch-sink-worker:start": "nodemon -w src --exec \"node src/workers/elasticsearch-sink-worker.js | pino-pretty\"",
     "docs": "node scripts/generate-openapi",
     "emails": "node emails/build",
     "lint": "eslint src scripts",
