--- a/services/web/package.json
+++ b/services/web/package.json
@@ -14,65 +14,63 @@
     "generate": "cd ../../generator && yarn install && yarn generate"
   },
   "dependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-decorators": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.9.4",
+    "@babel/core": "^7.13.14",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-proposal-decorators": "^7.13.5",
+    "@babel/plugin-transform-runtime": "^7.13.10",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/preset-react": "^7.13.13",
     "@bedrockio/config": "^2.0.3",
-    "@hot-loader/react-dom": "^16.13.0",
+    "@hot-loader/react-dom": "^17.0.1",
     "@sentry/browser": "^6.0.1",
     "autoprefixer": "^9.7.6",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.2.2",
     "babel-plugin-lodash": "^3.3.4",
-    "babel-plugin-styled-components": "^1.10.7",
+    "babel-plugin-styled-components": "^1.12.0",
     "circular-dependency-plugin": "^5.2.0",
+    "copy-webpack-plugin": "^8.1.0",
     "country-list": "^2.2.0",
-    "css-loader": "^3.5.3",
+    "css-loader": "^5.2.0",
     "cssnano": "^4.1.10",
+    "express-to-koa": "^2.0.0",
     "favicons-webpack-plugin": "^4.2.0",
-    "file-loader": "^6.0.0",
     "github-markdown-css": "^4.0.0",
-    "history": "^4.10.1",
+    "html-loader": "^2.1.2",
     "html-webpack-plugin": "^4.4.1",
-    "jest": "^25.5.4",
     "koa": "^2.11.0",
     "koa-basic-auth": "^4.0.0",
     "koa-logger": "^3.2.1",
     "koa-mount": "^4.0.0",
     "koa-static": "^5.0.0",
-    "koa-webpack": "^5.3.0",
     "less": "^3.11.1",
     "less-loader": "^6.0.0",
-    "loader-utils": "^2.0.0",
     "lodash": "^4.17.20",
     "luxon": "^1.23.0",
-    "mini-css-extract-plugin": "^0.9.0",
+    "mini-css-extract-plugin": "^1.4.0",
     "moment": "^2.23.0",
     "postcss-loader": "^3.0.0",
     "prop-types": "^15.7.2",
-    "raw-loader": "^4.0.1",
     "react": "^17.0.2",
     "react-day-picker": "^7.4.10",
     "react-dom": "^17.0.2",
-    "react-dropzone": "^11.0.1",
+    "react-dropzone": "^11.3.2",
     "react-helmet-async": "^1.0.9",
     "react-hot-loader": "^4.13.0",
     "react-markdown": "^5.0.2",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-syntax-highlighter": "^12.2.1",
     "react-virtualized": "^9.21.0",
     "recharts": "^2.0.0-beta.7",
     "remark-gfm": "^1.0.0",
     "semantic-ui-less": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
-    "style-loader": "^1.2.1",
+    "style-loader": "^2.0.0",
     "styled-components": "^5.1.0",
-    "url-loader": "^4.1.0",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
+    "webpack": "^5.30.0",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-middleware": "^4.1.0",
+    "webpack-hot-middleware": "^2.25.0",
     "yargs": "^15.3.1"
   },
   "devDependencies": {
@@ -81,6 +79,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-react": "^7.19.0",
+    "jest": "^26.6.3",
     "lint-staged": "^10.2.2",
     "node-mocks-http": "^1.8.1",
     "prettier": "^2.0.5",
