--- a/services/web/package.json
+++ b/services/web/package.json
@@ -6,7 +6,7 @@
     "node": ">=10"
   },
   "scripts": {
-    "build": "export NODE_OPTIONS=\"--max-old-space-size=4096\"; rm -rf ./dist && webpack -p",
+    "build": "rm -rf ./dist && NODE_ENV=production NODE_OPTIONS=\"--max-old-space-size=4096\" webpack",
     "start": "node ./serve/dev",
     "static": "node ./serve/static",
     "lint": "eslint src serve scripts",
@@ -33,10 +33,11 @@
     "css-loader": "^5.2.0",
     "cssnano": "^4.1.10",
     "express-to-koa": "^2.0.0",
-    "favicons-webpack-plugin": "^4.2.0",
+    "favicons": "^6.2.1",
+    "favicons-webpack-plugin": "^5.0.2",
     "github-markdown-css": "^4.0.0",
     "html-loader": "^2.1.2",
-    "html-webpack-plugin": "^4.4.1",
+    "html-webpack-plugin": "^5.3.1",
     "koa": "^2.11.0",
     "koa-basic-auth": "^4.0.0",
     "koa-logger": "^3.2.1",
@@ -74,17 +75,17 @@
     "yargs": "^15.3.1"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-jest": "^23.8.2",
-    "eslint-plugin-react": "^7.19.0",
+    "@babel/eslint-parser": "^7.13.10",
+    "@testing-library/dom": "^7.30.3",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^13.1.1",
+    "eslint": "^7.22.0",
+    "eslint-plugin-bedrock": "^1.0.0",
     "jest": "^26.6.3",
-    "lint-staged": "^10.2.2",
+    "lint-staged": "^10.5.4",
     "node-mocks-http": "^1.8.1",
-    "prettier": "^2.0.5",
-    "prettier-eslint": "^9.0.1",
-    "webpack-bundle-analyzer": "^3.7.0"
+    "prettier": "^2.2.1",
+    "prettier-eslint": "^12.0.0"
   },
   "volta": {
     "node": "14.15.1",
