--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
         working-directory: ./services/web
     strategy:
       matrix:
-        node-version: [14.x]
+        node-version: [14.16.0]
     steps:
       - uses: actions/checkout@v2
 
@@ -28,6 +28,7 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
+
       - name: Install Dependencies
         run: yarn install
 
@@ -49,6 +50,15 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+
+      - uses: getong/elasticsearch-action@v1.2
+        with:
+          elasticsearch version: "7.9.3"
+          host port: 9200
+          container port: 9200
+          host node port: 9300
+          node port: 9300
+          discovery type: "single-node"
 
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
