Succesful deployment to bedrock-foundation tectonic-cluster-1

--- a/deployment/environments/bedrock-foundation/config.json
+++ b/deployment/environments/bedrock-foundation/config.json
@@ -11,6 +11,7 @@
       "maxNodeCount": 3,
       "machineType": "n2-standard-2"
     },
+    "services": ["tectonic-api", "tectonic-web"],
     "label": "app"
   }
 }
