--- a/deployment/environments/bedrock-foundation/data/elasticsearch-deployment.yml
+++ b/deployment/environments/bedrock-foundation/data/elasticsearch-deployment.yml
@@ -12,9 +12,37 @@ spec:
       labels:
         app: elasticsearch
     spec:
+      terminationGracePeriodSeconds: 300
+      initContainers:
+        - name: "volume-permissions"
+          image: "busybox:latest"
+          imagePullPolicy: "Always"
+          command:
+            ["sh", "-c", "chown -R 1000:1000 /usr/share/elasticsearch/data"]
+          securityContext:
+            privileged: true
+          volumeMounts:
+            - name: elasticsearch-persistent-storage
+              mountPath: /usr/share/elasticsearch/data
+        - name: "sysctl"
+          image: "busybox:latest"
+          imagePullPolicy: "Always"
+          command: ["sysctl", "-w", "vm.max_map_count=262144"]
+          securityContext:
+            privileged: true
+        - name: "ulimit"
+          image: "busybox:latest"
+          imagePullPolicy: "Always"
+          command: ["sh", "-c", "ulimit -n 65536"]
+          securityContext:
+            privileged: true
       containers:
-        - image: elasticsearch:7.11
+        - image: elasticsearch:7.12.0
           name: elasticsearch
+          # resources:
+          #   requests:
+          #     memory: "16000Mi"
+          #     cpu: "4000m"
           env:
             - name: NAMESPACE
               valueFrom:
@@ -30,6 +58,8 @@ spec:
               value: "true"
             - name: ES_JAVA_OPTS
               value: "-Xms500m -Xmx500m"
+            - name: discovery.type
+              value: single-node
           ports:
             - containerPort: 9200
               name: http
