--- a/deployment/environments/bedrock-foundation/services/tectonic-api-service.yml
+++ b/deployment/environments/bedrock-foundation/services/tectonic-api-service.yml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: api
+  name: tectonic-api
   labels:
-    name: api
+    name: tectonic-api
 spec:
   type: LoadBalancer
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
   selector:
     app: api
-  loadBalancerIP: 0.0.0.0
+  loadBalancerIP: 35.231.101.6
