--- a/deployment/environments/bedrock-foundation/services/api-deployment.yml
+++ b/deployment/environments/bedrock-foundation/services/api-deployment.yml
@@ -40,9 +40,9 @@ spec:
             - name: JWT_SECRET
               value: qOQ+Sh4tro5qBZEhSsWGoHd1t1kyjOQjfywqE7s8
             - name: APP_DOMAIN
-              value: tectonic.io
+              value: bedrock.foundation
             - name: APP_URL
-              value: "https://tectonic.io"
+              value: "https://tectonic.bedrock.foundation"
             - name: POSTMARK_FROM
               value: no-reply@tectonic.io
             - name: POSTMARK_APIKEY
