--- a/deployment/environments/bedrock-foundation/services/api-jobs-deployment.yml
+++ b/deployment/environments/bedrock-foundation/services/api-jobs-deployment.yml
@@ -26,7 +26,7 @@ spec:
             - name: ELASTICSEARCH_URI
               value: "http://elasticsearch:9200"
             - name: APP_DOMAIN
-              value: tectonic.io
+              value: bedrock.foundation
             - name: POSTMARK_FROM
               value: no-reply@tectonic.io
             - name: POSTMARK_APIKEY
