--- a/services/web/Dockerfile
+++ b/services/web/Dockerfile
@@ -6,6 +6,7 @@ COPY ./package.json /service/package.json
 COPY ./yarn.lock /service/yarn.lock
 
 # Install required packages
+RUN apk add --update bash curl;
 RUN cd /service; yarn install --frozen-lockfile
 
 # Copy app source
