Added policy analytics

--- a/services/api/.env
+++ b/services/api/.env
@@ -13,6 +13,7 @@ ADMIN_PASSWORD=tectonic.now
 
 # JWT Secret to sign and encrypt tokens
 JWT_SECRET=m6bv7!m|E:7:*X3Mx7I)2+Y>B70+&K
+POLICY_JWT_SECRET=m6bv7!m|E:7:*X3Mx7I)2+Y>POLICY
 
 # Postmark mail delivery
 POSTMARK_FROM=no-reply@tectonic.io
