--- a/services/web/package.json
+++ b/services/web/package.json
@@ -57,6 +57,7 @@
     "react-dropzone": "^11.3.2",
     "react-helmet-async": "^1.0.9",
     "react-hot-loader": "^4.13.0",
+    "react-json-view": "^1.21.3",
     "react-markdown": "^5.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
