publish-fixture-events script now publishes fixture events for EVSE metervalues and controllers, and Bar purchases

--- a/deployment/environments/bedrock-foundation/services/api-deployment.yml
+++ b/deployment/environments/bedrock-foundation/services/api-deployment.yml
@@ -43,6 +43,8 @@ spec:
               value: bedrock.foundation
             - name: APP_URL
               value: "https://tectonic.bedrock.foundation"
+            - name: API_URL
+              value: "https://tectonic-api.bedrock.foundation"
             - name: POSTMARK_FROM
               value: no-reply@tectonic.io
             - name: POSTMARK_APIKEY
