Added JWT secrets for USER, APPLICATION and ACCESS

--- a/services/api/.env
+++ b/services/api/.env
@@ -16,6 +16,10 @@ ADMIN_PASSWORD=tectonic.now
 JWT_SECRET=m6bv7!m|E:7:*X3Mx7I)2+Y>B70+&K
 POLICY_JWT_SECRET=m6bv7!m|E:7:*X3Mx7I)2+Y>POLICY
 
+USER_JWT_SECRET=m6bv7!m|E:7:*X3Mx7I)2+Y>B70+&K
+APPLICATION_JWT_SECRET=m6bv7!m|E:7:*X3Mx7I)2+Y>B70+&L
+ACCESS_JWT_SECRET=m6bv7!m|E:7:*X3Mx7I)2+Y>B70+&M
+
 # Batches (local|gcs)
 BATCHES_STORE=local
 BATCHES_GCS_BUCKET=tectonic-batches
