Updating policy to accessPolicy, and introductin accessCredential and applicationCredential.

--- a/services/api/src/models/definitions/applicationCredential.json
+++ b/services/api/src/models/definitions/applicationCredential.json
@@ -1,17 +1,5 @@
 {
   "attributes": {
-    "type": { "type": "String", "enum": ["access", "", "read-write"], "default": "none" },
-    "collections": [
-      {
-        "type": { "type": "String", "enum": ["none", "read", "read-write"], "default": "none" },
-        "scope": {},
-        "collectionId": { "type": "ObjectId", "required": true, "autopopulate": false },
-        "fields": {
-          "type": { "type": "String", "enum": ["blacklist", "whitelist"], "default": "blacklist" },
-          "exclude": [{ "type": "String" }],
-          "include": [{ "type": "String" }]
-        }
-      }
-    ]
+    "name": { "type": "String" }
   }
 }
