--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,7 @@ version: "3.7"
 
 services:
   api:
-    command:
-      [
+    command: [
         "./scripts/wait-for-it.sh",
         "mongo:27017",
         "--",
@@ -39,14 +38,15 @@ services:
       - mongo
       - pubsub
       - elasticsearch
+      - api-elasticsearch-worker
     depends_on:
       - mongo
       - pubsub
       - elasticsearch
+      - api-elasticsearch-worker
 
   api-elasticsearch-worker:
-    command:
-      [
+    command: [
         "./scripts/wait-for-it.sh",
         "mongo:27017",
         "--",
