--- a/services/api/src/models/definitions/applicationCredential.json
+++ b/services/api/src/models/definitions/applicationCredential.json
@@ -1,5 +1,5 @@
 {
   "attributes": {
-    "name": { "type": "String" }
+    "name": { "type": "String", "unique": true, "required": true, "lowercase": true, "trim": true }
   }
 }
