--- a/services/web/package.json
+++ b/services/web/package.json
@@ -62,6 +62,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-syntax-highlighter": "^12.2.1",
+    "react-tectonic": "../../../react-tectonic/react-tectonic-0.0.9.tgz",
     "react-virtualized": "^9.21.0",
     "recharts": "^2.0.0-beta.7",
     "remark-gfm": "^1.0.0",
