--- a/services/web/package.json
+++ b/services/web/package.json
@@ -60,7 +60,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-syntax-highlighter": "^12.2.1",
-    "react-tectonic": "../../../react-tectonic/react-tectonic-0.0.9.tgz",
+    "react-tectonic": "^0.1.0",
     "remark-gfm": "^1.0.0",
     "semantic-ui-less": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
