--- a/deployment/environments/bedrock-foundation/config.json
+++ b/deployment/environments/bedrock-foundation/config.json
@@ -11,7 +11,8 @@
       "maxNodeCount": 3,
       "machineType": "n2-standard-2"
     },
-    "services": ["tectonic-api", "tectonic-web"],
+    "services": [],
+    "ingresses": ["tectonic-api", "tectonic-web"],
     "label": "app"
   }
 }
