Added LICENSE. Fix for missing APP_URL. gitignore tectonic folder. Added WiP docker push script.

--- a/deployment/environments/bedrock-foundation/config.json
+++ b/deployment/environments/bedrock-foundation/config.json
@@ -13,6 +13,7 @@
     },
     "services": [],
     "ingresses": ["tectonic-api", "tectonic-web"],
-    "label": "app"
+    "label": "app",
+    "bootstrapDeploy": false
   }
 }
