Small changes to Web Dockerfile

--- a/deployment/environments/bedrock-foundation/config.json
+++ b/deployment/environments/bedrock-foundation/config.json
@@ -14,6 +14,6 @@
     "services": [],
     "ingresses": ["tectonic-api", "tectonic-web"],
     "label": "app",
-    "bootstrapDeploy": false
+    "bootstrapDeploy": true
   }
 }
