--- a/services/web/Dockerfile
+++ b/services/web/Dockerfile
@@ -1,20 +1,20 @@
-FROM node:14-alpine
+FROM node:14.16-alpine
 
+# Yarn will not install any package listed in devDependencies if the NODE_ENV environment variable is set to production. Use this flag to instruct Yarn to ignore NODE_ENV and take its production-or-not status from this flag instead.
 ARG NODE_ENV=production
 
 COPY package.json /service/package.json
 COPY yarn.lock /service/yarn.lock
-COPY scripts/install_githooks service/scripts/install_githooks
 
 # Update & install required packages
 RUN apk add --update bash curl;
 RUN cd /service; yarn install --frozen-lockfile;
 
-# Copy app source
-COPY . /service/
+# Copy web source
+COPY . /service
 
-# Set work directory to /api
-WORKDIR /service/
+# Set work directory to /web
+WORKDIR /service
 
 RUN yarn build
 
