--- a/deployment/environments/bedrock-foundation/services/api-cli-deployment.yml
+++ b/deployment/environments/bedrock-foundation/services/api-cli-deployment.yml
@@ -29,12 +29,18 @@ spec:
               value: admin@tectonic.io
             - name: ADMIN_PASSWORD
               value: Bedrock.lake!
+            - name: JWT_SECRET
+              value: qOQ+Sh4tro5qBZEhSsWGoHd1t1kyjOQjfywqE7s8
             - name: API_URL
               value: "https://tectonic-api.bedrock.foundation"
+            - name: APP_URL
+              value: "https://bedrock.foundation"
             - name: BATCHES_STORE
               value: gcs
             - name: BATCHES_GCS_BUCKET
               value: bedrock-foundation-tectonic-batches
+            - name: LOG_LEVEL
+              value: debug
           volumeMounts:
             - name: jobs-cache
               mountPath: /workdir/data
