Updated gcr.io images to bedrockio docker hub

--- a/deployment/environments/bedrock-foundation/services/api-elasticsearch-sink-deployment.yml
+++ b/deployment/environments/bedrock-foundation/services/api-elasticsearch-sink-deployment.yml
@@ -13,7 +13,7 @@ spec:
         app: api-elasticsearch-sink
     spec:
       containers:
-        - image: gcr.io/bedrock-foundation/tectonic-services-api-elasticsearch-sink
+        - image: bedrockio/tectonic-elasticsearch-sink
           imagePullPolicy: Always
           name: api-elasticsearch-sink
           env:
