--- a/deployment/environments/bedrock-foundation/services/api-cli-deployment.yml
+++ b/deployment/environments/bedrock-foundation/services/api-cli-deployment.yml
@@ -13,7 +13,7 @@ spec:
         app: api-cli
     spec:
       containers:
-        - image: gcr.io/bedrock-foundation/tectonic-services-api-cli
+        - image: bedrockio/tectonic-cli
           imagePullPolicy: Always
           name: api-cli
           env:
