--- a/deployment/environments/bedrock-foundation/services/api-deployment.yml
+++ b/deployment/environments/bedrock-foundation/services/api-deployment.yml
@@ -17,7 +17,7 @@ spec:
         app: api
     spec:
       containers:
-        - image: gcr.io/bedrock-foundation/tectonic-services-api
+        - image: bedrockio/tectonic-api
           imagePullPolicy: Always
           name: main
           resources:
