--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,51 @@ services:
       - elasticsearch
       - api-elasticsearch-worker
 
+  api-cli:
+    command: [
+        "./scripts/wait-for-it.sh",
+        "mongo:27017",
+        "--",
+        "./scripts/wait-for-it.sh",
+        "elasticsearch:9200",
+        "--",
+        "./scripts/wait-for-it.sh",
+        "pubsub:9200",
+        "--",
+        "sleep",
+        "30",
+        "--",
+        "node",
+        "./scripts/publish-fixture-events.js",
+      ]
+    environment:
+      - MOCK_EMAIL=true
+      - MONGO_URI=mongodb://mongo/tectonic_dev
+      - PUBSUB_EMULATOR_HOST=pubsub:8200
+      - ELASTICSEARCH_URI=http://elasticsearch:9200
+      - GOOGLE_CLOUD_PROJECT=tectonic
+    build:
+      context: ./services/api
+      dockerfile: Dockerfile.cli
+      args:
+        ENV_NAME: development
+    volumes:
+      - ./services/api/src:/service/src
+      - ./services/api/fixtures:/service/fixtures
+      - ./services/api/scripts:/service/scripts
+      - ./services/api/.env:/service/.env
+      - ./services/api/openapi:/service/openapi
+    links:
+      - mongo
+      - pubsub
+      - elasticsearch
+      - api-elasticsearch-worker
+    depends_on:
+      - mongo
+      - pubsub
+      - elasticsearch
+      - api-elasticsearch-worker
+
   api-elasticsearch-worker:
     command: [
         "./scripts/wait-for-it.sh",
