Fixes for mongo-to-tectonic. Allow collection to GET by name.

--- a/services/mongo-to-tectonic/.env
+++ b/services/mongo-to-tectonic/.env
@@ -1,6 +1,6 @@
 MONGO_URI=mongodb://localhost/tectonic_dev
 MONGO_COLLECTIONS_TO_INDEX="users,collections"
-MONGO_COLLECTIONS_TO_INDEX_HISTORICAL=""
+MONGO_COLLECTIONS_TO_INDEX_HISTORICAL=
 MONGO_UPDATED_AT_FIELD=updatedAt
 MONGO_INDEXER_INTERVAL_SECONDS=30
 MONGO_EXCLUDE_ATTRIBUTES="users.email,users.hashedPassword"
