Fix for failing to connect to pubsub in production/staging.

--- a/services/api/.env
+++ b/services/api/.env
@@ -34,7 +34,7 @@ ENV_NAME=development
 
 # PubSub
 PUBSUB_EMULATOR=true
-PUBSUB_EMULATOR_HOST=localhost:8200
+# PUBSUB_EMULATOR_HOST=localhost:8200 # Do not set, because in production pubsub will run in emulation mode...
 PUBSUB_RAW_EVENTS_TOPIC=raw-events
 PUBSUB_RAW_EVENTS_SUB_ELASTICSEARCH=raw-events-sub-elasticsearch
 
