Added skipBatchStorage option to collection. Added default local run without PUBSUB (emulator) and directly ingest into ES with bulkInserting of the batch events.

--- a/services/api/.env
+++ b/services/api/.env
@@ -33,7 +33,7 @@ LOG_LEVEL=info
 ENV_NAME=development
 
 # PubSub
-PUBSUB_EMULATOR=true
+PUBSUB_EMULATOR=false
 # PUBSUB_EMULATOR_HOST=localhost:8200 # Do not set, because in production pubsub will run in emulation mode...
 PUBSUB_RAW_EVENTS_TOPIC=raw-events
 PUBSUB_RAW_EVENTS_SUB_ELASTICSEARCH=raw-events-sub-elasticsearch
