--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,11 +46,11 @@ services:
       - api-elasticsearch-worker
 
   api-cli:
-    command: bash -c "./scripts/wait-for-it.sh mongo:27017 && ./scripts/wait-for-it.sh elasticsearch:9200 && ./scripts/wait-for-it.sh pubsub:8200 && sleep 20 && node ./scripts/publish-fixture-events.js"
+    command: bash -c "./scripts/wait-for-it.sh mongo:27017 && ./scripts/wait-for-it.sh elasticsearch:9200 && sleep 10 && node ./scripts/publish-fixture-events.js"
     environment:
       - MOCK_EMAIL=true
       - MONGO_URI=mongodb://mongo/tectonic_dev
-      - PUBSUB_EMULATOR_HOST=pubsub:8200
+      - PUBSUB_EMULATOR=false
       - ELASTICSEARCH_URI=http://elasticsearch:9200
       - GOOGLE_CLOUD_PROJECT=tectonic
       - API_URL=http://api:3300
@@ -70,50 +70,8 @@ services:
       - mongo
       - pubsub
       - elasticsearch
-      - api-elasticsearch-worker
     depends_on:
       - api
-      - mongo
-      - pubsub
-      - elasticsearch
-      - api-elasticsearch-worker
-
-  api-elasticsearch-worker:
-    command: [
-        "./scripts/wait-for-it.sh",
-        "mongo:27017",
-        "--",
-        "./scripts/wait-for-it.sh",
-        "elasticsearch:9200",
-        "--",
-        "./scripts/wait-for-it.sh",
-        "pubsub:8200",
-        "--",
-        "yarn",
-        "elasticsearch-sink:start:production", # producion required to overwrite PUBSUB_EMULATOR_HOST
-      ]
-    environment:
-      - MOCK_EMAIL=true
-      - MONGO_URI=mongodb://mongo/tectonic_dev
-      - PUBSUB_EMULATOR_HOST=pubsub:8200
-      - ELASTICSEARCH_URI=http://elasticsearch:9200
-      - GOOGLE_CLOUD_PROJECT=tectonic
-    build:
-      context: ./services/api
-      dockerfile: Dockerfile.elasticsearch-sink
-      args:
-        ENV_NAME: development
-    volumes:
-      - ./services/api/src:/service/src
-      - ./services/api/fixtures:/service/fixtures
-      - ./services/api/scripts:/service/scripts
-      - ./services/api/.env:/service/.env
-      - ./services/api/openapi:/service/openapi
-    links:
-      - mongo
-      - pubsub
-      - elasticsearch
-    depends_on:
       - mongo
       - pubsub
       - elasticsearch
@@ -139,15 +97,8 @@ services:
     ports:
       - 27017
 
-  pubsub:
-    build:
-      context: ./services/pubsub-emulator
-      dockerfile: Dockerfile
-    ports:
-      - 8200
-
   elasticsearch:
-    image: elasticsearch:7.12.0
+    image: elasticsearch:7.14.0
     ports:
       - 9200
       - 9300
@@ -155,7 +106,7 @@ services:
       - "discovery.type=single-node"
 
   kibana:
-    image: docker.elastic.co/kibana/kibana:7.12.0
+    image: docker.elastic.co/kibana/kibana:7.14.0
     container_name: kibana
     ports:
       - 5601:5601
