--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,16 +9,13 @@ services:
         "./scripts/wait-for-it.sh",
         "elasticsearch:9200",
         "--",
-        "./scripts/wait-for-it.sh",
-        "pubsub:8200",
-        "--",
         "yarn",
         "start:production", # producion required to overwrite PUBSUB_EMULATOR_HOST
       ]
     environment:
       - MOCK_EMAIL=true
       - MONGO_URI=mongodb://mongo/tectonic_dev
-      - PUBSUB_EMULATOR_HOST=pubsub:8200
+      - PUBSUB_EMULATOR=false
       - ELASTICSEARCH_URI=http://elasticsearch:9200
       - GOOGLE_CLOUD_PROJECT=tectonic
     build:
@@ -36,14 +33,10 @@ services:
       - "3300:3300"
     links:
       - mongo
-      - pubsub
       - elasticsearch
-      - api-elasticsearch-worker
     depends_on:
       - mongo
-      - pubsub
       - elasticsearch
-      - api-elasticsearch-worker
 
   api-cli:
     command: bash -c "./scripts/wait-for-it.sh mongo:27017 && ./scripts/wait-for-it.sh elasticsearch:9200 && sleep 10 && node ./scripts/publish-fixture-events.js"
@@ -68,12 +61,10 @@ services:
     links:
       - api
       - mongo
-      - pubsub
       - elasticsearch
     depends_on:
       - api
       - mongo
-      - pubsub
       - elasticsearch
 
   web:
