Improved docker-compose logging by only showing warnings and errors for ES and disabled logging for Kibana

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,6 +95,7 @@ services:
       - 9300
     environment:
       - "discovery.type=single-node"
+      - "logger.level=WARN"
 
   kibana:
     image: docker.elastic.co/kibana/kibana:7.14.0
@@ -103,3 +104,5 @@ services:
     environment:
       ELASTICSEARCH_URL: http://elasticsearch:9200
       ELASTICSEARCH_HOSTS: '["http://elasticsearch:9200"]'
+    logging:
+      driver: none
