--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,11 +89,12 @@ services:
   elasticsearch:
     image: elasticsearch:7.14.0
     ports:
-      - 9200
-      - 9300
+      - 9200:9200
+      - 9300:9300
     environment:
       - "discovery.type=single-node"
       - "logger.level=WARN"
+      - "xpack.security.enabled=false"
 
   kibana:
     image: docker.elastic.co/kibana/kibana:7.14.0
