--- a/services/mongo-to-tectonic/package.json
+++ b/services/mongo-to-tectonic/package.json
@@ -23,9 +23,11 @@
     "mongodb": "^3.7.4"
   },
   "devDependencies": {
+    "@eslint/js": "^9.5.0",
     "@shelf/jest-mongodb": "^4.3.2",
-    "eslint": "^7.13.0",
+    "eslint": "9.x",
     "eslint-config-prettier": "^6.15.0",
+    "globals": "^15.6.0",
     "jest": "^28.0.0",
     "joi-to-json-schema": "^3.4.0",
     "juice": "^7.0.0",
